@@ -1,0 +1,8 @@
+WARNING: bad38.pdf: file is damaged
+WARNING: bad38.pdf (offset 781): xref not found
+WARNING: bad38.pdf: Attempting to reconstruct cross-reference table
+/QTest is direct and has type string (6)
+/QTest is a string with value potato
+unparse: (potato)
+unparseResolved: (potato)
+test 1 done
