@@ -1,0 +1,1 @@
+bad38.pdf (offset 781): xref not found
